--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
